--- a/Gallery.html
+++ b/Gallery.html
@@ -92,7 +92,7 @@
     <a target="_blank" href="img_mountains.jpg">
       <img src="my birthday 23.jpg" alt="Mountains" width="600" height="400">
     </a>
-    <div class="desc">My birhday dinner with family 2023</div>
+    <div class="desc">My birthday dinner with family 2023</div>
   </div>
   <div class="gallery">
     <a target="_blank" href="img_mountains.jpg">
