--- a/known.html
+++ b/known.html
@@ -11,7 +11,7 @@
 <img src="z.jpg" height="300" width="300">
 <ul>
     <li>Nicknames: Bubby, Babe</li>
-    <li>Favorite things: Parker, viedo games, tacos</li>
+    <li>Favorite things: Parker, video games, tacos</li>
     <li>Pet Peeves: People who don't use turn signals</li>
     <li>Fun Fact: Zach is SUPER flexible</li>
     <li>Life Philosophy: just be happy, man</li>
